--- a/Examples/HelloWorld.ipynb
+++ b/Examples/HelloWorld.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ylfoo/HelloWorld/blob/main/Examples/HelloWorld.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/ylfoo/HelloWorld"
@@ -13,7 +23,7 @@
         }
       },
       "id": "UW7W2JIovXDH",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -43,7 +53,7 @@
         "outputId": "7af3e146-6223-44cd-f254-210c90754fe3"
       },
       "id": "45xkpFG3wG6u",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "ca45a6d2",
       "metadata": {
         "id": "ca45a6d2"
@@ -100,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "e5d0583a",
       "metadata": {
         "id": "e5d0583a",
@@ -135,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "d4f94e26",
       "metadata": {
         "id": "d4f94e26",
@@ -173,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "8ef24c7b",
       "metadata": {
         "id": "8ef24c7b",
@@ -225,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "46c85a68",
       "metadata": {
         "id": "46c85a68",
@@ -277,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "12451ee4",
       "metadata": {
         "id": "12451ee4",
@@ -328,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "71ec7ed9",
       "metadata": {
         "id": "71ec7ed9",
@@ -375,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "39594168",
       "metadata": {
         "id": "39594168",
@@ -420,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "08acb47b",
       "metadata": {
         "id": "08acb47b",
@@ -464,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "c4ce3493",
       "metadata": {
         "id": "c4ce3493",
@@ -508,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "ad4ea898",
       "metadata": {
         "id": "ad4ea898",
@@ -551,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "1fea1869",
       "metadata": {
         "id": "1fea1869",
@@ -594,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "dda0af92",
       "metadata": {
         "id": "dda0af92",
@@ -627,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "40e1a18c",
       "metadata": {
         "id": "40e1a18c",
@@ -680,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "d1d7c8bc",
       "metadata": {
         "id": "d1d7c8bc",
@@ -733,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "cf28ec3f",
       "metadata": {
         "id": "cf28ec3f",
@@ -796,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "427347ce",
       "metadata": {
         "id": "427347ce",
@@ -863,7 +873,8 @@
       "version": "3.11.3"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
